Fix overlapping breadcrumb & desc, lock scrolling for tests

--- a/client/src/adatest.css
+++ b/client/src/adatest.css
@@ -143,6 +143,11 @@
     opacity: 0.6;
 }
 
+.adatest-scroll-wrap {
+    overflow-y: auto;
+    max-height: 35vh;
+}
+
 .adatest-scroll-wrap::-webkit-scrollbar {
     display: none;
 }
